# WALLRUS

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  proper_test_sqli.txt  pyproject.toml  test_sqli.txt  wallrus.sh
data/raw/: sample_requests.txt
scripts/: train.py
src/wallrus/: __init__.py
src/wallrus/cli/: main.py
src/wallrus/core/: __init__.py  engine.py  parser.py  signatures.py
src/wallrus/ml/: detector.py
src/wallrus/utils/: formatter.py  logger.py
tests/test_core/: test_engine.py
