[build-system]
requires      = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name        = "wallrus"
version     = "0.1.0"
description = "CLI Web Application Firewall — signature-based + ML anomaly detection"
authors     = [
    { name = "Aaditya" },
    { name = "Krittika" },
]
readme      = "README.md"
license     = { text = "MIT" }
requires-python = ">=3.10"

dependencies = [
    # ── CLI framework
    "typer[all]>=0.12",
    "rich>=13.7",

    # ── HTTP/packet layer
    "mitmproxy>=10.3",
    "scapy>=2.5",

    # ── Data & ML (Phase 2)
    "scikit-learn>=1.4",
    "pandas>=2.2",
    "numpy>=1.26",
    "lightgbm>=4.3",
    "joblib>=1.3",

    # ── Utilities
    "python-dateutil>=2.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-cov",
    "ruff",
    "mypy",
    "pre-commit",
]

[project.scripts]
wallrus = "wallrus.cli.main:app"

[tool.setuptools.packages.find]
where = ["src"]

# ── Ruff linting ──────────────────────────────────────────────────────────────
[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]

# ── Pytest ────────────────────────────────────────────────────────────────────
[tool.pytest.ini_options]
testpaths    = ["tests"]
addopts      = "-v --tb=short"
python_files = "test_*.py"

# ── Mypy ─────────────────────────────────────────────────────────────────────
[tool.mypy]
python_version = "3.10"
strict         = false
warn_unused_imports = true
